--- a/programs-page.html
+++ b/programs-page.html
@@ -27,10 +27,9 @@
             <div class="logo-title-container">
                 <div class="logo-title-wrapper">
                     <div class="logo-column">
-                        <div class="logo-circl
-							<img
-								loading=" lazy" src="assets/img/Profile.jpg" class="logo-image" alt="College of San Mateo Digital Media Logo" />
-                    </div>
+                        <div class="logo-circle">
+                            <img loading="lazy" src="./assets/img/Profile.jpg" class="logo-image" alt="College of San Mateo Digital Media Logo">
+                        </div>
                 </div>
                 <div class="title-column">
                     <div class="title-wrapper">
@@ -78,20 +77,23 @@
 
                     <div class="courses-grid">
                         <div class="course-row">
-                            <div class="course-card">
-                                <div class="course-content">
-                                    <div class="course-icon">
-                                        <img
-										src="https://cdn.builder.io/api/v1/image/assets/TEMP/aec2857f9a18b4b17d279d3eb19c4b13d46dadc12d4e634f0857e2d008c991c4?placeholderIfAbsent=true&apiKey=d3787cd48a20414ca76b636b5d2f807e"
-										alt="Media in Society course icon"
-										class="course-image"
-										loading="lazy"
-									/>
+                            <a href="./dgme_100.html">
+                                <div class="course-card">
+                                    <div class="course-content">
+                                        <div class="course-icon">
+                                            <img
+                                            src="https://cdn.builder.io/api/v1/image/assets/TEMP/aec2857f9a18b4b17d279d3eb19c4b13d46dadc12d4e634f0857e2d008c991c4?placeholderIfAbsent=true&apiKey=d3787cd48a20414ca76b636b5d2f807e"
+                                            alt="Media in Society course icon"
+                                            class="course-image"
+                                            loading="lazy"
+                                        />
+                                        </div>
+                                        <div class="course-title">DGME 100:<br />Media In Society</div>
                                     </div>
-                                    <div class="course-title">DGME 100:<br />Media In Society</div>
                                 </div>
-                            </div>
-
+    
+    
+                            </a>
                             <div class="course-card">
                                 <div class="course-content">
                                     <div class="course-icon">
