--- a/contact-page.html
+++ b/contact-page.html
@@ -27,10 +27,9 @@
             <div class="logo-title-container">
                 <div class="logo-title-wrapper">
                     <div class="logo-column">
-                        <div class="logo-circl
-							<img
-								loading=" lazy" src="assets/img/Profile.jpg" class="logo-image" alt="College of San Mateo Digital Media Logo" />
-                    </div>
+                        <div class="logo-circle">
+                            <img loading="lazy" src="./assets/img/Profile.jpg" class="logo-image" alt="College of San Mateo Digital Media Logo">
+                        </div>
                 </div>
                 <div class="title-column">
                     <div class="title-wrapper">
