--- a/programs-page.html
+++ b/programs-page.html
@@ -91,166 +91,186 @@
                                         <div class="course-title">DGME 100:<br />Media In Society</div>
                                     </div>
                                 </div>
-    
-    
                             </a>
-                            <div class="course-card">
-                                <div class="course-content">
-                                    <div class="course-icon">
-                                        <img
-										src="https://cdn.builder.io/api/v1/image/assets/TEMP/831e60570ccead459c709932418a763434eac85d0ef000758629c4fbeb5f8dc2?placeholderIfAbsent=true&apiKey=d3787cd48a20414ca76b636b5d2f807e"
-										alt="Media Law & Ethics course icon"
-										class="course-image"
-										loading="lazy"
-									/>
-                                    </div>
-                                    <div class="course-title">
-                                        DGME 102:<br />Media Law & Ethics
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="course-row">
-                            <div class="course-card">
-                                <div class="course-content">
-                                    <div class="course-icon">
-                                        <img
-										src="https://cdn.builder.io/api/v1/image/assets/TEMP/063314f0120f886669f45baa3db5650873fd738fa30e6a39f725bcfac7684cc3?placeholderIfAbsent=true&apiKey=d3787cd48a20414ca76b636b5d2f807e"
-										alt="Intro to Digital Media course icon"
-										class="course-image"
-										loading="lazy"
-									/>
-                                    </div>
-                                    <div class="course-title">
-                                        DGME 105:<br />Intro to Digital Media
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="course-card">
-                                <div class="course-content">
-                                    <div class="course-icon">
-                                        <img
-										src="https://cdn.builder.io/api/v1/image/assets/TEMP/58811ce2a5f6a7286f66a0b42dc77be0679e90290818cb42c40ed7aedce81c28?placeholderIfAbsent=true&apiKey=d3787cd48a20414ca76b636b5d2f807e"
-										alt="Web & Mobile Design I course icon"
-										class="course-image"
-										loading="lazy"
-									/>
-                                    </div>
-                                    <div class="course-title">
-                                        DGME 167:<br />Web & Mobile Design I
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="course-row">
-                            <div class="course-card">
-                                <div class="course-content">
-                                    <div class="course-icon">
-                                        <img
-										src="https://cdn.builder.io/api/v1/image/assets/TEMP/96a283ff50b3cc2aa32ae89285aaf8de09c148fb7b6c1f1c123ab6b6171119fe?placeholderIfAbsent=true&apiKey=d3787cd48a20414ca76b636b5d2f807e"
-										alt="Web & Mobile Design II course icon"
-										class="course-image"
-										loading="lazy"
-									/>
-                                    </div>
-                                    <div class="course-title">
-                                        DGME 168:<br />Web & Mobile Design II
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="course-card">
-                                <div class="course-content">
-                                    <div class="course-icon">
-                                        <img
-										src="https://cdn.builder.io/api/v1/image/assets/TEMP/6991fd6b901ea74ef7cb555ea576943d41cd0d0699508d14152cdf3c1c1c7f98?placeholderIfAbsent=true&apiKey=d3787cd48a20414ca76b636b5d2f807e"
-										alt="Web & Mobile Design III course icon"
-										class="course-image"
-										loading="lazy"
-									/>
-                                    </div>
-                                    <div class="course-title">
-                                        DGME 169:<br />Web & Mobile Design III:<br />Mobile First
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="course-row">
-                            <div class="course-card">
-                                <div class="course-content">
-                                    <div class="course-icon">
-                                        <img
-										src="https://cdn.builder.io/api/v1/image/assets/TEMP/2012b157ae068e6248457969c251bc3af46f192a856e01829c8bb965f3ab236a?placeholderIfAbsent=true&apiKey=d3787cd48a20414ca76b636b5d2f807e"
-										alt="UI/UX Design course icon"
-										class="course-image"
-										loading="lazy"
-									/>
-                                    </div>
-                                    <div class="course-title">
-                                        DGME 164:<br />User Interface/User Experience Design
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="course-card">
-                                <div class="course-content">
-                                    <div class="course-icon">
-                                        <img
-										src="https://cdn.builder.io/api/v1/image/assets/TEMP/a42396c7e8ce937d2da83775c91b2c3888160de59ea0ed15894af4fc22166f38?placeholderIfAbsent=true&apiKey=d3787cd48a20414ca76b636b5d2f807e"
-										alt="Interaction Design course icon"
-										class="course-image"
-										loading="lazy"
-									/>
-                                    </div>
-                                    <div class="course-title">
-                                        DGME 175:<br />Interaction Design
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="course-row">
-                            <div class="course-card">
-                                <div class="course-content">
-                                    <div class="course-icon">
-                                        <img
-										src="https://cdn.builder.io/api/v1/image/assets/TEMP/2bc895bb2a8dd6a5a4a47ebd0ececf5ff59ac84b5840be26c792032ac9a56619?placeholderIfAbsent=true&apiKey=d3787cd48a20414ca76b636b5d2f807e"
-										alt="UX Research Methods course icon"
-										class="course-image"
-										loading="lazy"
-									/>
-                                    </div>
-                                    <div>
-                                        <div class="coming-soon-label">Coming soon</div>
+                            <a href="./dgme_102.html">
+                                <div class="course-card">
+                                    <div class="course-content">
+                                        <div class="course-icon">
+                                            <img
+                                            src="https://cdn.builder.io/api/v1/image/assets/TEMP/831e60570ccead459c709932418a763434eac85d0ef000758629c4fbeb5f8dc2?placeholderIfAbsent=true&apiKey=d3787cd48a20414ca76b636b5d2f807e"
+                                            alt="Media Law & Ethics course icon"
+                                            class="course-image"
+                                            loading="lazy"
+                                        />
+                                        </div>
                                         <div class="course-title">
-                                            DGME 176:<br />UX Research Methods
+                                            DGME 102:<br />Media Law & Ethics
+                                        </div>
+                                    </div>
+                                </div>
+                                </a>
+                        </div>
+
+                        <div class="course-row">
+                            <a href="./dgme_105.html">
+                                <div class="course-card">
+                                    <div class="course-content">
+                                        <div class="course-icon">
+                                            <img
+                                            src="https://cdn.builder.io/api/v1/image/assets/TEMP/063314f0120f886669f45baa3db5650873fd738fa30e6a39f725bcfac7684cc3?placeholderIfAbsent=true&apiKey=d3787cd48a20414ca76b636b5d2f807e"
+                                            alt="Intro to Digital Media course icon"
+                                            class="course-image"
+                                            loading="lazy"
+                                        />
+                                        </div>
+                                        <div class="course-title">
+                                            DGME 105:<br />Intro to Digital Media
+                                        </div>
+                                    </div>
+                                </div>
+                                </a>
+
+                            <a href="./dgme_167.html">
+                                <div class="course-card">
+                                    <div class="course-content">
+                                        <div class="course-icon">
+                                            <img
+                                            src="https://cdn.builder.io/api/v1/image/assets/TEMP/58811ce2a5f6a7286f66a0b42dc77be0679e90290818cb42c40ed7aedce81c28?placeholderIfAbsent=true&apiKey=d3787cd48a20414ca76b636b5d2f807e"
+                                            alt="Web & Mobile Design I course icon"
+                                            class="course-image"
+                                            loading="lazy"
+                                        />
+                                        </div>
+                                        <div class="course-title">
+                                            DGME 167:<br />Web & Mobile Design I
+                                        </div>
+                                    </div>
+                                </div>
+                                </a>
+
+                        </div>
+
+                        <div class="course-row">
+                            <a href="./dgme_168.html">
+                                <div class="course-card">
+                                    <div class="course-content">
+                                        <div class="course-icon">
+                                            <img
+                                            src="https://cdn.builder.io/api/v1/image/assets/TEMP/96a283ff50b3cc2aa32ae89285aaf8de09c148fb7b6c1f1c123ab6b6171119fe?placeholderIfAbsent=true&apiKey=d3787cd48a20414ca76b636b5d2f807e"
+                                            alt="Web & Mobile Design II course icon"
+                                            class="course-image"
+                                            loading="lazy"
+                                        />
+                                        </div>
+                                        <div class="course-title">
+                                            DGME 168:<br />Web & Mobile Design II
+                                        </div>
+                                    </div>
+                                </div>
+                                </a>
+
+                            <a href="./dgme_169.html">
+                                <div class="course-card">
+                                    <div class="course-content">
+                                        <div class="course-icon">
+                                            <img
+                                            src="https://cdn.builder.io/api/v1/image/assets/TEMP/6991fd6b901ea74ef7cb555ea576943d41cd0d0699508d14152cdf3c1c1c7f98?placeholderIfAbsent=true&apiKey=d3787cd48a20414ca76b636b5d2f807e"
+                                            alt="Web & Mobile Design III course icon"
+                                            class="course-image"
+                                            loading="lazy"
+                                        />
+                                        </div>
+                                        <div class="course-title">
+                                            DGME 169:<br />Web & Mobile Design III:<br />Mobile First
+                                        </div>
+                                    </div>
+                                </div>
+                                </a>
+
+                        </div>
+
+                        <div class="course-row">
+                            <a href="./dgme_164.html">
+                                <div class="course-card">
+                                    <div class="course-content">
+                                        <div class="course-icon">
+                                            <img
+                                            src="https://cdn.builder.io/api/v1/image/assets/TEMP/2012b157ae068e6248457969c251bc3af46f192a856e01829c8bb965f3ab236a?placeholderIfAbsent=true&apiKey=d3787cd48a20414ca76b636b5d2f807e"
+                                            alt="UI/UX Design course icon"
+                                            class="course-image"
+                                            loading="lazy"
+                                        />
+                                        </div>
+                                        <div class="course-title">
+                                            DGME 164:<br />User Interface/User Experience Design
+                                        </div>
+                                    </div>
+                                </div>
+                                </a>
+
+                            <a href="./dgme_175.html">
+                                <div class="course-card">
+                                    <div class="course-content">
+                                        <div class="course-icon">
+                                            <img
+                                            src="https://cdn.builder.io/api/v1/image/assets/TEMP/a42396c7e8ce937d2da83775c91b2c3888160de59ea0ed15894af4fc22166f38?placeholderIfAbsent=true&apiKey=d3787cd48a20414ca76b636b5d2f807e"
+                                            alt="Interaction Design course icon"
+                                            class="course-image"
+                                            loading="lazy"
+                                        />
+                                        </div>
+                                        <div class="course-title">
+                                            DGME 175:<br />Interaction Design
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                                </a>
 
-                            <div class="course-card">
-                                <div class="course-content">
-                                    <div class="course-icon">
-                                        <img
-										src="https://cdn.builder.io/api/v1/image/assets/TEMP/520328aa21ab8f8e15825452807a4567349c13237d4e2a41492bd9bb31c8b027?placeholderIfAbsent=true&apiKey=d3787cd48a20414ca76b636b5d2f807e"
-										alt="UX Data Visualization Design course icon"
-										class="course-image"
-										loading="lazy"
-									/>
-                                    </div>
-                                    <div>
-                                        <div class="coming-soon-label">Coming soon</div>
-                                        <div class="course-title">
-                                            DGME 177:<br />UX Data Visualization Design
+
+                        <div class="course-row">
+                            <a href="./dgme_176.html">
+                                <div class="course-card">
+                                    <div class="course-content">
+                                        <div class="course-icon">
+                                            <img
+                                            src="https://cdn.builder.io/api/v1/image/assets/TEMP/2bc895bb2a8dd6a5a4a47ebd0ececf5ff59ac84b5840be26c792032ac9a56619?placeholderIfAbsent=true&apiKey=d3787cd48a20414ca76b636b5d2f807e"
+                                            alt="UX Research Methods course icon"
+                                            class="course-image"
+                                            loading="lazy"
+                                        />
+                                        </div>
+                                        <div>
+                                            <div class="coming-soon-label">Coming soon</div>
+                                            <div class="course-title">
+                                                DGME 176:<br />UX Research Methods
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                                </a>
+
+                            <a href="./dgme_177.html">
+                                <div class="course-card">
+                                    <div class="course-content">
+                                        <div class="course-icon">
+                                            <img
+                                            src="https://cdn.builder.io/api/v1/image/assets/TEMP/520328aa21ab8f8e15825452807a4567349c13237d4e2a41492bd9bb31c8b027?placeholderIfAbsent=true&apiKey=d3787cd48a20414ca76b636b5d2f807e"
+                                            alt="UX Data Visualization Design course icon"
+                                            class="course-image"
+                                            loading="lazy"
+                                        />
+                                        </div>
+                                        <div>
+                                            <div class="coming-soon-label">Coming soon</div>
+                                            <div class="course-title">
+                                                DGME 177:<br />UX Data Visualization Design
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                </a>
+
                         </div>
 
                         <div class="course-card" style="width: 606px; max-width: 100%">
